# ai-engineer-technical-test-develop

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  TECHNICAL_SPEC.md  alembic.ini  coverage.xml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  test_explore.py
.github/workflows/: ci.yml  docs.yml
api/: index.html
backend/: config.py
backend/application/pipeline/: discovery.py  pipeline.py  reconciler.py  validator.py
backend/application/services/: job_service.py  site_service.py
backend/domain/: exceptions.py
backend/domain/entities/: job.py  quarry.py  source.py
backend/domain/value_objects/: confidence.py  coordinates.py  evidence.py
backend/infrastructure/api/: main.py
backend/infrastructure/api/dependencies/: db.py  services.py
backend/infrastructure/api/exceptions/: handlers.py
backend/infrastructure/api/routers/: discovery.py  extractor.py  health.py  jobs.py  pipeline_test.py  scraper.py  sites.py
backend/infrastructure/api/utils/: pagination.py
backend/infrastructure/db/: models.py  session.py
backend/infrastructure/db/migrations/: env.py
backend/infrastructure/db/repositories/: job_repository.py  site_repository.py
backend/infrastructure/discovery/: overpass.py  web_search.py
backend/infrastructure/llm/: llm_extractor.py
backend/infrastructure/llm/providers/: openai_provider.py
backend/infrastructure/scraper/: http_scraper.py
backend/infrastructure/worker/: celery_app.py  celery_queue.py  stub_queue.py  tasks.py
backend/ports/inbound/: job_service.py  site_service.py
backend/ports/outbound/: discoverer.py  extractor.py  job_repository.py  scraper.py  site_repository.py  task_queue.py
backend/schemas/: site_schema.json
deployment/: index.html
docs/: api.md  deployment.md  index.md  pipeline.md  technical-spec.md  testing.md
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: JobForm.jsx  JobsList.jsx  SiteDetail.jsx  SiteList.jsx  StatusBadge.jsx
frontend/src/pages/: HomePage.jsx
pipeline/: index.html
search/: search_index.json
technical-spec/: index.html
testing/: index.html
tests/eval/: ground_truth.json  score.py  scorer.py
tests/integration/: api_end_to_end_test.py  conftest.py  job_repository_test.py  site_repository_test.py
tests/unit/application/: pipeline_steps_test.py
tests/unit/eval/: scorer_test.py
tests/unit/infrastructure/: http_scraper_test.py  jobs_router_test.py  llm_extractor_test.py  overpass_discoverer_test.py  sites_router_test.py  web_search_enricher_test.py
(+1 files in other folders)
